--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -327,6 +327,15 @@ html, body {
         padding-right: 5px;
         width: 100%;
       }
+      .personal-item-editor-tinymce-container {
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 40%;
+      }
+      .personal-item-editor-display-type {
+        margin-right: 5px;
+      }
+
       .buttons {
         white-space: nowrap;
       }
