--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -169,3 +169,46 @@ img.popup {
 .survey-header {
   display: none;
 }
+
+.question__personal-info {
+  &__2input {
+    width: 28% !important;
+  }
+
+  &__3input {
+    width: 18% !important;
+  }
+
+  &__tel-splitter {
+    display: inline-block;
+    width: 2%;
+    text-align: center;
+  }
+
+  &__name-splitter {
+    display: inline-block;
+    width: 2.5%;
+  }
+
+  &__select_with_input {
+    display: inline-block !important;
+  }
+
+  &__input_with_select {
+    margin-left: 10px;
+    width: 28% !important;
+  }
+
+  &__label-inline {
+    display: inline-block !important;
+    width: auto !important;
+  }
+
+  &__choice {
+    padding-right: 12px;
+
+    input {
+      margin-right: 4px !important;
+    }
+  }
+}
