Fix design to center check box of optional item

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -338,6 +338,9 @@ html, body {
       .personal-item-editor-display-type {
         margin-right: 10px;
       }
+      .personal-item-editor-optional-checkbox-td {
+        text-align: center;
+      }
 
       .buttons {
         white-space: nowrap;
