詳細プレビューでエラーとなる箇所を赤く表示されるように修正

--- a/lib/preview/css/detail.scss
+++ b/lib/preview/css/detail.scss
@@ -94,6 +94,10 @@ html, body {
       td {
         padding: 0 5px;
         border: 1px solid black;
+        &.error {
+          background-color: $background-color-alert-value;
+          color: $color-alert-value;
+        }
       }
     }
     .item-visibilities {
