--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -268,6 +268,9 @@ html, body {
     background-color: $disabled-background-color;
     cursor: not-allowed;
   }
+  .matrix-check-count-validation-label {
+    width: 60px;
+  }
 }
 
 /* HTMLのエディタ */
