--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -785,3 +785,14 @@ html, body {
     }
   }
 }
+
+.source-node-list {
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style-type: decimal;
+  list-style-position: inside;
+  > li {
+    display: block;
+    text-align: left;
+  }
+}
